redesign of doctors portal, and bug fixes

--- a/.gitignore
+++ b/.gitignore
@@ -270,3 +270,9 @@ LOGGING_SYSTEM.md
 PATIENT_SECURITY_IMPROVEMENTS.md
 
 RESTRUCTURE_SUMMARY.md
+
+rebranding-validation-report.md
+
+check-services.ps1
+start-services.bat
+start-services.ps1
