--- a/apps/api-gateway/package.json
+++ b/apps/api-gateway/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node src/server.ts",
-    "start": "ts-node src/server.ts"
+    "build": "tsc",
+    "prestart": "npm run build",
+    "start": "node dist/server.js",
+    "start:dev": "ts-node src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +23,8 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "@types/axios": "^0.9.36",
